@@ -1,3 +1,8 @@
+2012-12-03  Jakub Jelinek  <jakub@redhat.com>
+
+	* asan.c (instrument_assignment): Instrument lhs only
+	for gimple_store_p and rhs1 only for gimple_assign_load_p.
+
 2012-11-30  Jakub Jelinek  <jakub@redhat.com>
 
 	* tsan.c (is_load_of_const_p): Removed.
